# hackon

calendar-dashboard/: README.md  index.html  sample-data.json  script.js  styles.css
meeting-analyzer-extension/: README.md  background.js  content.css  content.js  create_icons.py  manifest.json  popup.css  popup.html  popup.js
meeting-analyzer-mcp/: .env.example  .gitignore  README.md  pyproject.toml
meeting-analyzer-mcp/examples/: sample_transcript.txt  test_api.sh
meeting-analyzer-mcp/responses/: analysis_response_20251218_023203.txt  analysis_response_20251218_023714.txt
meeting-analyzer-mcp/src/meeting_analyzer/: __init__.py  api.py  azure_api.py  server.py
